--- a/vendor.conf
+++ b/vendor.conf
@@ -1,4 +1,7 @@
 github.com/fatih/color 5df930a27be2502f99b292b7cc09ebad4d0891f4
+github.com/spf13/cobra 4d6af280c76ff7d266434f2dba207c4b75dfc076
+github.com/inconshreveable/mousetrap 76626ae9c91c4f2a10f34cad8ce83ea42c93bb75
+github.com/spf13/pflag a9789e855c7696159b7db0db7f440b449edf2b31
 github.com/mattn/go-colorable ad5389df28cdac544c99bd7b9161a0b5b6ca9d1b
 github.com/mattn/go-isatty a5cdd64afdee435007ee3e9f6ed4684af949d568
 golang.org/x/sys ebfc5b4631820b793c9010c87fd8fef0f39eb082
